--- a/WORMpipe.config
+++ b/WORMpipe.config
@@ -1,8 +1,32 @@
+
+manifest {
+	name = 'https://github.com/jkirangw/WORMpipe'
+	author = 'Joseph  Kirangwa'
+	homePage = 'http://worm-lab.eu/'
+	description = 'Worm Long Read Analysis Pipeline'
+	mainScript = 'WORMpipe.nf'
+	version = '1.0.0'
+}
+
+// create pipeline parameters
+
 params {
 
-	query = "myquery.fasta"
-	dbDir = "/path/to/my/blastDB/"
- 	dbName = "myBlastDB"
-	threads = 16
-	outdir = "out_dir"
+	read = "$PWD/312-11_deduplicated.ccs.fastq"
+	outdir = "results"
+	threads = 32
+	assembler = "hifiasm"
+        help = false	
 }
+
+
+// timeline report
+
+timeline {
+        enabled = true
+        file = "$params.outdir/timeline.html"
+}
+
+
+
+
