--- a/WORMpipe.config
+++ b/WORMpipe.config
@@ -14,6 +14,7 @@ params {
 
 	read = "$PWD/312-11_deduplicated.ccs.fastq"
 	nt = "nt"
+	taxdump="$PWD/taxdump"
 	outdir = "results"
 	threads = 32
 	assembler = "hifiasm"
